--- a/JustKeepLoading/Base.lproj/Main.storyboard
+++ b/JustKeepLoading/Base.lproj/Main.storyboard
@@ -29,10 +29,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="68"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c19-b4-tLO">
-                                                    <rect key="frame" x="8" y="8" width="54" height="52"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c19-b4-tLO">
+                                                    <rect key="frame" x="8" y="8" width="52" height="52"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="c19-b4-tLO" secondAttribute="height" multiplier="27:26" id="Wqa-GH-MOt"/>
+                                                        <constraint firstAttribute="width" secondItem="c19-b4-tLO" secondAttribute="height" multiplier="1:1" id="Wqa-GH-MOt"/>
                                                         <constraint firstAttribute="height" constant="52" id="d9u-AS-Jjo"/>
                                                     </constraints>
                                                 </imageView>
@@ -42,13 +42,13 @@
                                                         <constraint firstAttribute="height" constant="21" id="kzb-Mf-0Sl"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vkl-KW-oMJ">
-                                                    <rect key="frame" x="70" y="37" width="522" height="23"/>
+                                                    <rect key="frame" x="68" y="37" width="524" height="23"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
